changes for images and video

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^10.2.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.5.4",
+    "sharp": "^0.27.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
